# cartesian_product_view

./: CMakeLists.txt  LICENSE  README.md  cartesian_product_view.h
.github/workflows/: linux.yml  macos.yml  windows.yml
examples/: CMakeLists.txt  prob_dist_sum_dice.cpp
tests/: CMakeLists.txt  tests.cpp
